tests/sema/positive/shadowing.nv
fn main() : void {
    let x : int = 1;
    {
        let x : str = "a";
        print_str(x);
    }
    x = x + 1;
    return;
}
