tests/sema/negative/empty_return_in_non_void_function.nv
fn f() : int {
    return;
}

fn main() : void {
    return;
}
